apps/staging/thehive/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: thehive-class
spec:
  controllerName: traefik.io/gateway-controller
