apps/staging/thehive/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: thehive-gateway
spec:
  listeners:
  - name: http
    protocol: HTTP
    port: 80
