apps/staging/thehive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thehive
spec:
  ingressClassName: traefik
  rules:
    - host: thehive.ddc.sze.hu
      http:
        paths:
          - backend:
              service:
                name: thehive
                port:
                  number: 9091
            path: /
            pathType: Prefix
